--- a/src/main/webapp/app/entities/product/products.html
+++ b/src/main/webapp/app/entities/product/products.html
@@ -31,7 +31,7 @@
                     <td>
                         <div class="container-fluid">
                             <div class="row" ng-repeat="ingredient in product.ingredients">
-                                <div class="col-xs-3 no-padding">{{ingredient.amount}} kg</div>
+                                <div class="col-xs-3 no-padding">{{ingredient.amount | number:'3'}} kg</div>
                                 <div class="col-xs-9 no-padding">{{ingredient.spice.name}}</div>
                             </div>
                         </div>
