--- a/src/main/webapp/app/entities/production/productions.html
+++ b/src/main/webapp/app/entities/production/productions.html
@@ -27,11 +27,11 @@
             <tbody>
                 <tr ng-repeat="production in vm.productions track by production.id">
                     <td><a ui-sref="production-detail({id:production.id})">{{production.id}}</a></td>
-                    <td>{{production.date | date:'shortDate'}}</td>
+                    <td>{{production.date | date:'dd/MM/yyyy'}}</td>
                     <td>
                         <div class="container-fluid">
                             <div class="row" ng-repeat="productionItem in production.productionItems">
-                                <div class="col-xs-3 no-padding">{{productionItem.amount}} kg</div>
+                                <div class="col-xs-3 no-padding">{{productionItem.amount | number:'2'}} kg</div>
                                 <div class="col-xs-9 no-padding">{{productionItem.product.name}}</div>
                             </div>
                         </div>
