--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -82,6 +82,10 @@
     <script src="app/services/auth/auth.service.js"></script>
     <script src="app/services/auth/activate.service.js"></script>
     <script src="app/services/auth/account.service.js"></script>
+    <script src="app/reports/report.state.js"></script>
+    <script src="app/reports/product/product-report.state.js"></script>
+    <script src="app/reports/product/product-report.service.js"></script>
+    <script src="app/reports/product/product-report.controller.js"></script>
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
