--- a/src/main/webapp/app/reports/product/product-report.html
+++ b/src/main/webapp/app/reports/product/product-report.html
@@ -23,7 +23,7 @@
     <br/>
 
     <div class="table-responsive" style="overflow-x: auto; white-space: nowrap;">
-        <table class="jh-table table table-bordered report" ng-if="vm.reports.length">
+        <table class="jh-table table report" ng-if="vm.reports.length">
             <thead>
                 <tr>
                     <th rowspan="2">Data</th>
@@ -33,7 +33,8 @@
                     </th>
                 </tr>
                 <tr>
-                    <th ng-repeat-start="spice in vm.reports[0].spices | orderBy:'spiceName' track by spice.spiceName">
+                    <th ng-repeat-start="spice in vm.reports[0].spices | orderBy:'spiceName' track by spice.spiceName"
+                        class="start">
                         Receptura
                     </th>
                     <th>Wydano</th>
@@ -44,7 +45,8 @@
                 <tr ng-repeat="report in vm.reports | orderBy:'date' track by report.date">
                     <td>{{report.date | date:'dd/MM/yyyy'}}</a></td>
                     <td>{{report.amount | number:'2'}} kg</td>
-                    <td ng-repeat-start="spice in report.spices | orderBy:'spiceName' track by spice.spiceName">
+                    <td ng-repeat-start="spice in report.spices | orderBy:'spiceName' track by spice.spiceName"
+                        class="start">
                         {{spice.recipieAmount | number:'3'}} kg
                     </td>
                     <td>{{spice.usedAmount | number:'3'}} kg</td>
