--- a/src/main/resources/reports/productReport.html
+++ b/src/main/resources/reports/productReport.html
@@ -1,22 +1,127 @@
-<!DOCTYPE html>
+<?xml version="1.0" encoding="UTF-8"?>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<body>
-    <table>
-        <thead>
-            <tr>
-                <th>Data</th>
-                <th>Ilość</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="report : ${reports}">
-                <td th:text="${report.date}"></td>
-                <td th:text="${report.amount + ' kg'}"></td>
-            </tr>
-        </tbody>
-    </table>
-</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <style type="text/css">
+            @page {
+                size: A4 landscape;
+                margin: 10mm;
+            }
+            table {
+                border-collapse: collapse;
+                table-layout: fixed;
+            }
+            th, td {
+                border: 1px solid #000000;
+            }
+            .bold {
+                font-weight: 600;
+            }
+            .center {
+                text-align: center;
+            }
+            #header th, #header td {
+                padding: 2mm;
+            }
+            #content th, #header td {
+                padding: 1mm;
+            }
+        </style>
+    </head>
+    <body style="margin: 0; width: 277mm; height: 190mm; font-family: 'Arial Unicode MS';">
+        <table id="header" style="margin: 0 auto; font-size: 10pt;">
+            <tbody>
+                <tr>
+                    <td rowspan="3">
+                        <img src="images/logo.png" width="200px" height="100px"/>
+                    </td>
+                    <td rowspan="3" class="center" style="width: 50mm;">
+                        <span class="bold">
+                            "Raport ważenia dodatków funkcjonalnych"
+                        </span><br/>
+                        F nr 2/P G 4/1
+                    </td>
+                    <td class="bold">Data wydania:</td>
+                    <td class="center" th:text="${date}">17/09/2017</td>
+                </tr>
+                <tr>
+                    <td class="bold">Wersja wydania:</td>
+                    <td class="center">1</td>
+                </tr>
+                <tr>
+                    <td class="bold">Strona:</td>
+                    <td class="center">1 z 1</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <div class="bold" style="margin: 5mm 3mm 3mm; font-size: 11pt;">
+            Nazwa asortymentu:
+            <span style="text-transform: uppercase;" th:text="${report.productName}">
+                Boczek wędzony
+            </span>
+        </div>
+
+        <table id="content" style="font-size: 7pt;">
+            <thead class="center">
+                <tr>
+                    <th rowspan="3" width="6%">Data rozpoczęcia produkcji partii</th>
+                    <th rowspan="3" width="6%">Ilość użytych składników mięsnych [kg]</th>
+                    <th colspan="9">Mieszanki zawierające substancje limitowane</th>
+                    <th rowspan="3" width="8%">Podpis osoby wykonującej ważenie</th>
+                    <th rowspan="3" width="8%">Wynik kontroli weryfikującej (co najmniej raz dziennie)</th>
+                    <th rowspan="3" width="9%">Podpis osoby odpowiedzialnej za weryfikację</th>
+                </tr>
+                <tr>
+                    <th colspan="3" th:text="${report.getSpiceName(0)}">Przyprawa 1</th>
+                    <th colspan="3" th:text="${report.getSpiceName(1)}">Przyprawa 2</th>
+                    <th colspan="3" th:text="${report.getSpiceName(2)}">Przyprawa 3</th>
+                </tr>
+                <tr>
+                    <th width="5%">Ilość wynikająca z receptury</th>
+                    <th width="5%">Ilość wydana z magazynu</th>
+                    <th>Identyfikacja partii wydanej z magazynu</th>
+                    <th width="5%">Ilość wynikająca z receptury</th>
+                    <th width="5%">Ilość wydana z magazynu</th>
+                    <th>Identyfikacja partii wydanej z magazynu</th>
+                    <th width="5%">Ilość wynikająca z receptury</th>
+                    <th width="5%">Ilość wydana z magazynu</th>
+                    <th>Identyfikacja partii wydanej z magazynu</th>
+                </tr>
+            </thead>
+            <tbody class="center">
+                <tr th:each="reportItem : ${report.reportItems}">
+                    <td th:text="${reportItem.productionDate}">17/08/2017</td>
+                    <td th:text="${reportItem.productionAmount}">150.00</td>
+                    <td th:text="${reportItem.usedSpices[0].recipeAmount}">1.500</td>
+                    <td th:text="${reportItem.usedSpices[0].usedAmount}">1.500</td>
+                    <td>
+                        <div th:each="spiceUsage : ${reportItem.usedSpices[0].spiceUsages}"
+                             th:text="${spiceUsage.spiceAmount + ' ' + spiceUsage.serialNumber}">
+                            1.500 0003448150018
+                        </div>
+                    </td>
+                    <td th:text="${reportItem.usedSpices[1].recipeAmount}">1.500</td>
+                    <td th:text="${reportItem.usedSpices[1].usedAmount}">1.500</td>
+                    <td>
+                        <div th:each="spiceUsage : ${reportItem.usedSpices[1].spiceUsages}"
+                             th:text="${spiceUsage.spiceAmount + ' ' + spiceUsage.serialNumber}">
+                            1.500 0003459610029
+                        </div>
+                    </td>
+                    <td th:text="${reportItem.usedSpices[2].recipeAmount}">2.550</td>
+                    <td th:text="${reportItem.usedSpices[2].usedAmount}">2.550</td>
+                    <td>
+                        <div th:each="spiceUsage : ${reportItem.usedSpices[2].spiceUsages}"
+                             th:text="${spiceUsage.spiceAmount + ' ' + spiceUsage.serialNumber}">
+                            2.550 2017-07-05
+                        </div>
+                    </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </body>
 </html>
