--- a/src/main/resources/reports/productReport.html
+++ b/src/main/resources/reports/productReport.html
@@ -5,7 +5,30 @@
         <style type="text/css">
             @page {
                 size: A4 landscape;
-                margin: 10mm;
+                margin: 77mm 10mm 10mm;
+                @top-center {
+                    content: element(header);
+                    padding-top: 10mm;
+                }
+                @bottom-center {
+                    content: element(footer);
+                    vertical-align: top;
+                }
+            }
+            #pagenumber:before {
+                content: counter(page);
+            }
+            #pagecount:before {
+                content: counter(pages);
+            }
+            #header td {
+                padding: 2mm;
+            }
+            #header th {
+                padding: 1mm;
+            }
+            #content td {
+                padding: 1mm;
             }
             table {
                 border-collapse: collapse;
@@ -20,108 +43,115 @@
             .center {
                 text-align: center;
             }
-            #header th, #header td {
-                padding: 2mm;
-            }
-            #content th, #header td {
-                padding: 1mm;
-            }
         </style>
     </head>
-    <body style="margin: 0; width: 277mm; height: 190mm; font-family: 'Arial Unicode MS';">
-        <table id="header" style="margin: 0 auto; font-size: 10pt;">
-            <tbody>
-                <tr>
-                    <td rowspan="3">
-                        <img src="images/logo.png" width="200px" height="100px"/>
-                    </td>
-                    <td rowspan="3" class="center" style="width: 50mm;">
-                        <span class="bold">
-                            "Raport ważenia dodatków funkcjonalnych"
-                        </span><br/>
-                        F nr 2/P G 4/1
-                    </td>
-                    <td class="bold">Data wydania:</td>
-                    <td class="center" th:text="${date}">17/09/2017</td>
-                </tr>
-                <tr>
-                    <td class="bold">Wersja wydania:</td>
-                    <td class="center">1</td>
-                </tr>
-                <tr>
-                    <td class="bold">Strona:</td>
-                    <td class="center">1 z 1</td>
-                </tr>
-            </tbody>
-        </table>
+    <body style="margin: 0; width: 277mm; height: 123mm; font-family: 'Arial Unicode MS';">
+        <div id="header" style="position: running(header);">
+            <table style="margin: 0 auto; font-size: 10pt;">
+                <tbody>
+                    <tr>
+                        <td rowspan="3">
+                            <img src="images/logo.png" width="200px" height="100px"/>
+                        </td>
+                        <td rowspan="3" class="center" style="width: 50mm;">
+                            <span class="bold">
+                                "Raport ważenia dodatków funkcjonalnych"
+                            </span><br/>
+                            F nr 2/P G 4/1
+                        </td>
+                        <td class="bold">Data wydania:</td>
+                        <td class="center" th:text="${#dates.format(date, 'dd/MM/yyyy')}">17/09/2017</td>
+                    </tr>
+                    <tr>
+                        <td class="bold">Wersja wydania:</td>
+                        <td class="center">1</td>
+                    </tr>
+                    <tr>
+                        <td class="bold">Strona:</td>
+                        <td class="center">
+                            <span id="pagenumber"></span> z <span id="pagecount"></span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <div class="bold" style="margin: 5mm 3mm 3mm; font-size: 11pt;">
-            Nazwa asortymentu:
-            <span style="text-transform: uppercase;" th:text="${report.productName}">
-                Boczek wędzony
-            </span>
+            <div class="bold" style="margin: 3mm; font-size: 11pt;">
+                Nazwa asortymentu:
+                <span style="text-transform: uppercase;" th:text="${report.productName}">
+                    Boczek wędzony
+                </span>
+            </div>
+
+            <table style="font-size: 7pt;">
+                <thead class="center">
+                    <tr>
+                        <th rowspan="3" width="6%">Data rozpoczęcia produkcji partii</th>
+                        <th rowspan="3" width="6%">Ilość użytych składników mięsnych [kg]</th>
+                        <th colspan="9">Mieszanki zawierające substancje limitowane</th>
+                        <th rowspan="3" width="8%">Podpis osoby wykonującej ważenie</th>
+                        <th rowspan="3" width="6%">Wynik kontroli weryfikującej</th>
+                        <th rowspan="3" width="8%">Podpis osoby odpowiedzialnej za weryfikację</th>
+                    </tr>
+                    <tr>
+                        <th colspan="3" th:text="${report.getSpiceName(0)}">Przyprawa 1</th>
+                        <th colspan="3" th:text="${report.getSpiceName(1)}">Przyprawa 2</th>
+                        <th colspan="3" th:text="${report.getSpiceName(2)}">Przyprawa 3</th>
+                    </tr>
+                    <tr>
+                        <th width="6%">Ilość wynikająca z receptury</th>
+                        <th width="6%">Ilość wydana z magazynu</th>
+                        <th>Identyfikacja partii wydanej z magazynu</th>
+                        <th width="6%">Ilość wynikająca z receptury</th>
+                        <th width="6%">Ilość wydana z magazynu</th>
+                        <th>Identyfikacja partii wydanej z magazynu</th>
+                        <th width="6%">Ilość wynikająca z receptury</th>
+                        <th width="6%">Ilość wydana z magazynu</th>
+                        <th>Identyfikacja partii wydanej z magazynu</th>
+                    </tr>
+                </thead>
+            </table>
         </div>
 
-        <table id="content" style="font-size: 7pt;">
-            <thead class="center">
-                <tr>
-                    <th rowspan="3" width="6%">Data rozpoczęcia produkcji partii</th>
-                    <th rowspan="3" width="6%">Ilość użytych składników mięsnych [kg]</th>
-                    <th colspan="9">Mieszanki zawierające substancje limitowane</th>
-                    <th rowspan="3" width="8%">Podpis osoby wykonującej ważenie</th>
-                    <th rowspan="3" width="8%">Wynik kontroli weryfikującej (co najmniej raz dziennie)</th>
-                    <th rowspan="3" width="9%">Podpis osoby odpowiedzialnej za weryfikację</th>
-                </tr>
-                <tr>
-                    <th colspan="3" th:text="${report.getSpiceName(0)}">Przyprawa 1</th>
-                    <th colspan="3" th:text="${report.getSpiceName(1)}">Przyprawa 2</th>
-                    <th colspan="3" th:text="${report.getSpiceName(2)}">Przyprawa 3</th>
-                </tr>
-                <tr>
-                    <th width="5%">Ilość wynikająca z receptury</th>
-                    <th width="5%">Ilość wydana z magazynu</th>
-                    <th>Identyfikacja partii wydanej z magazynu</th>
-                    <th width="5%">Ilość wynikająca z receptury</th>
-                    <th width="5%">Ilość wydana z magazynu</th>
-                    <th>Identyfikacja partii wydanej z magazynu</th>
-                    <th width="5%">Ilość wynikająca z receptury</th>
-                    <th width="5%">Ilość wydana z magazynu</th>
-                    <th>Identyfikacja partii wydanej z magazynu</th>
-                </tr>
-            </thead>
-            <tbody class="center">
-                <tr th:each="reportItem : ${report.reportItems}">
-                    <td th:text="${reportItem.productionDate}">17/08/2017</td>
-                    <td th:text="${reportItem.productionAmount}">150.00</td>
-                    <td th:text="${reportItem.usedSpices[0].recipeAmount}">1.500</td>
-                    <td th:text="${reportItem.usedSpices[0].usedAmount}">1.500</td>
-                    <td>
-                        <div th:each="spiceUsage : ${reportItem.usedSpices[0].spiceUsages}"
-                             th:text="${spiceUsage.spiceAmount + ' ' + spiceUsage.serialNumber}">
-                            1.500 0003448150018
-                        </div>
-                    </td>
-                    <td th:text="${reportItem.usedSpices[1].recipeAmount}">1.500</td>
-                    <td th:text="${reportItem.usedSpices[1].usedAmount}">1.500</td>
-                    <td>
-                        <div th:each="spiceUsage : ${reportItem.usedSpices[1].spiceUsages}"
-                             th:text="${spiceUsage.spiceAmount + ' ' + spiceUsage.serialNumber}">
-                            1.500 0003459610029
-                        </div>
-                    </td>
-                    <td th:text="${reportItem.usedSpices[2].recipeAmount}">2.550</td>
-                    <td th:text="${reportItem.usedSpices[2].usedAmount}">2.550</td>
-                    <td>
-                        <div th:each="spiceUsage : ${reportItem.usedSpices[2].spiceUsages}"
-                             th:text="${spiceUsage.spiceAmount + ' ' + spiceUsage.serialNumber}">
-                            2.550 2017-07-05
-                        </div>
-                    </td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
+        <div id="footer" style="font-size: 7pt; position: running(footer);">
+            P - pozytywny, N - negatywny
+        </div>
+
+        <div id="content">
+            <table width="100%" style="font-size: 7pt;">
+                <tbody class="center">
+                    <tr style="page-break-inside: avoid;" th:each="reportItem : ${report.reportItems}">
+                        <td width="6%" th:text="${#dates.format(reportItem.productionSimpleDate, 'dd/MM/yyyy')}">17/08/2017</td>
+                        <td width="6%" th:text="${reportItem.productionAmount}">150.00</td>
+                        <td width="6%" th:text="${reportItem.usedSpices[0].recipeAmount}">1.500</td>
+                        <td width="6%" th:text="${reportItem.usedSpices[0].usedAmount}">1.500</td>
+                        <td>
+                            <div th:each="spiceUsage : ${reportItem.usedSpices[0].spiceUsages}"
+                                 th:text="${spiceUsage.spiceAmount + ' ' + spiceUsage.serialNumber}">
+                                1.500 0003448150018
+                            </div>
+                        </td>
+                        <td width="6%" th:text="${reportItem.usedSpices[1].recipeAmount}">1.500</td>
+                        <td width="6%" th:text="${reportItem.usedSpices[1].usedAmount}">1.500</td>
+                        <td>
+                            <div th:each="spiceUsage : ${reportItem.usedSpices[1].spiceUsages}"
+                                 th:text="${spiceUsage.spiceAmount + ' ' + spiceUsage.serialNumber}">
+                                1.500 0003459610029
+                            </div>
+                        </td>
+                        <td width="6%" th:text="${reportItem.usedSpices[2].recipeAmount}">2.550</td>
+                        <td width="6%" th:text="${reportItem.usedSpices[2].usedAmount}">2.550</td>
+                        <td>
+                            <div th:each="spiceUsage : ${reportItem.usedSpices[2].spiceUsages}"
+                                 th:text="${spiceUsage.spiceAmount + ' ' + spiceUsage.serialNumber}">
+                                2.550 2017-07-05
+                            </div>
+                        </td>
+                        <td width="8%"></td>
+                        <td width="6%"></td>
+                        <td width="8%"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </body>
 </html>
